@@ -29,7 +29,6 @@ Readonly::Scalar my $SECONDS_PER_HOUR     => $SECONDS_PER_MINUTE * $MINUTES_PER_
 Readonly::Scalar my $MAX_COMPLETE_WAIT    => 6 * $SECONDS_PER_HOUR;
 Readonly::Scalar my $RTA_COMPLETE         => 10 * $SECONDS_PER_MINUTE;
 Readonly::Scalar my $INTENSITIES_DIR_PATH => 'Data/Intensities';
-Readonly::Array  my @NO_MOVE_NAMES        => qw( npgdonotmove npg_do_not_move );
 Readonly::Scalar my $MODE_INDEX           => 2;
 
 Readonly::Scalar my $RTA_COMPLETE_FN      => q[RTAComplete\.txt];
@@ -281,19 +280,14 @@ sub move_to_outgoing {
     my ($self) = @_;
 
     my $m;
-    my $rf = $self->runfolder_path();
-    if (any { -e join(q[/], $rf, $_) }  @NO_MOVE_NAMES) {
-        $m = "$rf flagged not to be moved to outgoing"
+    my $status = $self->tracking_run()->current_run_status_description();
+    if ($status eq 'qc complete') {
+        my $moved;
+        ($moved, $m) = $self->_move_folder(
+            $self->_destination_path('analysis', 'outgoing'));
     } else {
-        my $id = $self->tracking_run()->id_run;
-        my $status = $self->tracking_run()->current_run_status_description();
-        if ($status eq 'qc complete') {
-            my $destination = $self->_destination_path('analysis', 'outgoing');
-            my $moved;
-            ($moved, $m) = $self->_move_folder($destination);
-        } else {
-            $m = "Run $id status $status is not qc complete, not moving to outgoing";
-        }
+        $m = sprintf 'Run %i status %s is not qc complete, not moving to outgoing',
+                     $self->tracking_run()->id_run, $status;
     }
 
     return $m;
